--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "dev": "nodemon src/app --mode=devel --port=5500",
+    "start": "node src/app --mode=prod --port=5050"
   },
   "keywords": [],
   "author": "Gisel Sthefania Paredes Alvarez",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "commander": "^11.1.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
